<resources>
    <string name="app_name">DMS Uploader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="scan">SCAN BARCODE</string>
    <string name="use_flash">Use Flash</string>
    <string name="ref">REF</string>

    <string name="settings">Settings</string>
    <string name="nav_main_screen">Main screen</string>
    <string name="test_web_service">Test Web Service</string>
    <string name="web_service_url">Web Service URL</string>
    <string name="api_username">Username</string>
    <string name="api_password">Password</string>
    <string name="image_quality">Image Quality</string>
    <string name="doc_type">Doc Type</string>
    <string name="device_id">Device ID</string>
    <string name="nav_queue">Queue</string>
    <string name="nav_header_device_id">Device ID:</string>
    <string name="upload">UPLOAD</string>
    <string name="queue_size">QUEUE SIZE: %1$d</string>
    <string name="clear">CLEAR</string>
</resources>
